syntax = "proto3";

package aggregator.methods;

option go_package = "github.com/Yux77Yux/platform_backend/generated/aggregator";

import "review/messages/review.proto";
import "review/messages/status.proto";
import "creation/messages/creation.proto";
import "comment/messages/comment.proto";

import "common/user_creation_comment.proto";
import "common/access_token.proto";
import "common/api_response.proto";

message GetReviewsRequest {
  common.AccessToken access_token = 1;
  review.messages.ReviewStatus status = 2;// 获取需要审核的，或已被审核的
  int32 page = 3;
}

message GetNewReviewsRequest {
  common.AccessToken access_token = 1;
}

message GetCreationReviewsResponse {
  message CreationReview {
    review.messages.Review review = 1;
    creation.messages.Creation creation = 2;
  }
  common.ApiResponse msg = 1;
  repeated CreationReview reviews = 2;
  int32 count = 3;
}

message GetUserReviewsResponse {
  message UserReview {
    review.messages.Review review = 1;
    common.UserCreationComment user = 2;
  }
  common.ApiResponse msg = 1;
  repeated UserReview reviews = 2;
  int32 count = 3;
}

message GetCommentReviewsResponse {
  message CommentReview {
    review.messages.Review review = 1;
    comment.messages.Comment comment = 2;
  }
  common.ApiResponse msg = 1;
  repeated CommentReview reviews = 2;
  int32 count = 3;
}